[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "platevs-client"
version = "0.1.0"
description = "API Client for PLATE-VS (Protein-Ligand Affinity & Target Evaluation)"
authors = [{ name = "PLATE-VS Team" }]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
]

[tool.setuptools]
py-modules = ["platevs_client"]
